--- a/Televisao/nbproject/private/private.properties
+++ b/Televisao/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Lu\u00eds Gustavo\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\luisg\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
